--- a/index.html
+++ b/index.html
@@ -110,6 +110,21 @@
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
                     </svg>
                 </button>
+                <select id="outputFontSize" class="text-gray-700 bg-gray-100 rounded px-2 py-1">
+                    <option value="">Font Size</option>
+                    <option value="1">Small</option>
+                    <option value="3">Normal</option>
+                    <option value="5">Large</option>
+                    <option value="7">Huge</option>
+                </select>
+                <select id="outputFontFamily" class="text-gray-700 bg-gray-100 rounded px-2 py-1">
+                    <option value="">Font Family</option>
+                    <option value="Arial, sans-serif">Arial</option>
+                    <option value="Verdana, sans-serif">Verdana</option>
+                    <option value="Helvetica, sans-serif">Helvetica</option>
+                    <option value="Times New Roman, serif">Times New Roman</option>
+                    <option value="Courier New, monospace">Courier New</option>
+                </select>
             </div>
         </div>
     </div>
